--- a/task11.html
+++ b/task11.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>task11</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="//cdn.datatables.net/2.1.4/css/dataTables.dataTables.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="//cdn.datatables.net/2.1.4/js/dataTables.min.js"></script>
 </head>
 <body>
 <div class="container mt-5">
@@ -19,15 +21,44 @@
         </div>
         <div class="form-group">
             <label for="number">Number</label>
-            <input type="number" class="form-control" id="number" placeholder="Enter number" value="23" required>
+            <input type="number" class="form-control" id="number" placeholder="Enter number" value="5" required>
         </div>
         <button type="button" class="btn btn-primary">Submit</button>
     </form>
     <div id="response" class="mt-3"></div>
+
+    <h2>Bootstrap Table Example</h2>
+    <table id="connectminder" class="table table-striped table-bordered">
+        <thead class="table-dark">
+        <tr>
+            <th>Name</th>
+            <th>Number</th>
+            <th>Fibo</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>John Doe</td>
+            <td>12345</td>
+            <td>67890</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
 <script>
     $(document).ready(function(){
+        const table = $('#connectminder').DataTable({
+            ajax: {"url":"http://localhost:8000/task11history.php","type": "POST"},
+            searching: false,
+            pageLength: 3,
+            columns: [
+                { data: 'username' },
+                { data: 'number' },
+                { data: 'fibo' }
+            ]
+        });
+
         $("#userForm button").on("click", function(e) {
             let username = $("#username").val().trim();
             let number = $("#number").val().trim();
@@ -47,7 +78,6 @@
             if (!isValid) {
                 return;
             }
-            console.log(username, number);
 
             const data = {
                 username: username,
@@ -63,7 +93,10 @@
                 },
                 success: function(response) {
                     // Display success message
-                    $("#response").html('<div class="alert alert-success">Data submitted successfully!</div>');
+                    console.log(response.fibo);
+                    $("#response").html('<div class="alert alert-success">calculated successfully! rez ' + response.fibo + '</div>');
+                    table.ajax.reload(null, false); // Reload the data without resetting the pagination
+
                 },
                 error: function() {
                     // Display error message
